--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
         ],
       }
     </script>
-    
+
     <script src="https://cdn.jsdelivr.net/combine/npm/@unocss/runtime/core.global.min.js,npm/@supabase/supabase-js@2.38.5,gh/benisenstein/script-zoo/supabaseAuthUiSharedShim.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="w-screen h-screen bg-green-600 flex flex-col gap-8">
-        <div class="i-material-symbols:doorbell w-6em h-6em"></div>
-        <div class="i-material-symbols:doorbell-3p-outline w-6em h-6em"></div>
-        <div class="i-material-symbols:doorbell-chime-outline w-6em h-6em"></div>
-        <div class="i-material-symbols:doorbell-chime-outline w-6em h-6em"></div>
-        <div class="i-material-symbols:doorbell-chime-outline w-6em h-6em"></div>
+    <div class="w-screen h-screen flex gap-8">
+        <div>
+            class="i-material-symbols:doorbell w-6em h-6em"
+            <div class="i-material-symbols:doorbell w-6em h-6em"></div>
+        </div>
+        <div>
+            class="i-material-symbols:doorbell-chime-outline w-6em h-6em"
+            <div class="i-material-symbols:doorbell-chime-outline w-6em h-6em"></div>
+        </div>
     </div>
 </body>
 </html>
