--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
         ],
       }
     </script>
-
-    <script src="https://cdn.jsdelivr.net/combine/npm/@unocss/runtime/core.global.min.js,npm/@supabase/supabase-js@2.38.5,gh/benisenstein/script-zoo/supabaseAuthUiSharedShim.min.js"></script>
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime/core.global.min.js"></script>
+    <title>UnoCSS Iconify Icons Demo</title>
 </head>
 <body>
-    <div class="w-screen h-screen flex gap-8">
-        <div>
-            class="i-material-symbols:doorbell w-6em h-6em"
+    <div class="w-screen h-max flex gap-8">
+        <div class="p-4 border-2 rounded-md border-solid border-black">
+            class="i-material-symbols:doorbell"
             <div class="i-material-symbols:doorbell w-6em h-6em"></div>
         </div>
-        <div>
-            class="i-material-symbols:doorbell-chime-outline w-6em h-6em"
+        <div class="p-4 border-2 rounded-md border-solid border-black">
+            class="i-material-symbols:doorbell-chime-outline"
             <div class="i-material-symbols:doorbell-chime-outline w-6em h-6em"></div>
         </div>
     </div>
